fix: remove forced scrollbar

--- a/boilerplates/eleventy-boilerplate/src/assets/styles/4.elements/_base.scss
+++ b/boilerplates/eleventy-boilerplate/src/assets/styles/4.elements/_base.scss
@@ -23,7 +23,6 @@
 }
 
 html {
-  overflow-y: scroll;
   box-sizing: border-box;
   font-size: $font-size-root;
 }
